# wiseflow

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.multiplatform  LICENSE  README.md  README_AR.md  README_CN.md  README_DE.md  README_EN.md  README_FR.md  README_JP.md  README_KR.md  README_NEW.md  TODO.md  compose.yaml  docker-compose.production.yml  docker-compose.yml  docker_client.py  env_docker  env_sample  general_crawler_test.py  install_pocketbase.ps1  install_pocketbase.sh  network_capture_0.json  openclaw-version  openclaw-weixin.version.json  openclaw.version  package.json  pb_api.py  pv_supply_chain_costs_china_to_vietnam.md  pyproject.toml  requirements.txt  run.bat  run.ps1  run.sh  suggestions.md  (+3 more)
.claude/: 20260307_done.md
.cursor/: rules.json
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  release.yml
.qoder/quests/: branch-synchronization-and-cleanup.md
_disabled/config-templates/: mcporter.json
addon/: README.md  addon.json  overrides.sh
addon/patches/: 001-browser-tab-recovery.patch
addons/: README.md
addons/officials/: README.md  addon.json  requirements.txt
awada/: README.md
awada/awada-extension/: index.ts  openclaw.plugin.json  package.json  pnpm-lock.yaml
awada/awada-server/: .prettierrc  package.json  pm2.config.js  tsconfig.json
client/: .dockerignore  .gitignore  Dockerfile.api  Dockerfile.web  README.md  compose.yaml  config.ini  env_sample  sites.txt
client/backend/: README.md  __init__.py  backend.sh  background_task.py  docker_entrypoint.sh  embeddings.py  general_utils.py  get_insight.py  get_logger.py  get_report.py  get_search.py  main.py  pb_api.py  requirements.txt  tasks.sh  tranlsation_volcengine.py  work_process.py
client/pb/: README.md
client/web/: .eslintrc.cjs  index.html  pnpm-lock.yaml
config-templates/: openclaw-aihubmix.json  openclaw.json
core/: README.md  __init__.py  async_database.py  async_logger.py  backend.py  clear.py  db.py  deep_clear.py  dm.py  docker_entrypoint.sh  entry.py  general_process.py  pre_login.py  requirements.txt  run.sh  run_all.sh  run_task.py  run_task.sh  run_task_new.py  tasks.py  test.py  test_account_pool.py  test_cookie_exp.py  test_engines.py  warm_up.py  web_crawler_configs.py  windows.env  windows_general_process.py  windows_run.py
core/agents/: get_info.py  get_info_prompts.py  insights.py  seeact.py
core/analysis/: __init__.py  data_mining.py
core/backend/: HTTP_API.md  README.md  WS_API.md  __init__.py  app.py  config.py  main.py  ws.py
core/connectors/: __init__.py
core/connects/: __init__.py  rss_connect.py
core/crawl4ai/: README.md  __init__.py  __version__.py  async_configs.py  async_crawler_strategy.py  async_database.py  async_logger.py  async_webcrawler.py  config.py  install.py  markdown_generation_strategy.py  models.py  utils.py
core/crawler_configs/: README.md  __init__.py  default_config.py  mp_scraper.py
core/custom_crawlers/: README_EN.md  __init__.py  mp.py
core/custom_fetchings/: README.md  README_EN.md  __init__.py
core/custom_process/: README.md  __init__.py  mp_process.py
core/custom_processes/: __init__.py  crawler_configs.py
core/custom_scraper/: README.md  README_EN.md  __init__.py  mp.py
core/insight/: export_example.py  export_infos.py  pb_api.py  pb_exporter.py
core/insights/: __init__.py  get_info.py  rewrite.py
core/llms/: litellm_wrapper.py  openai_wrapper.py  siliconflow_wrapper.py
core/pb/: README.md
core/plugins/: __init__.py
core/references/: __init__.py
core/schema/: 2024082301_ddl.sql  2024082302_ddl.sql  2024082401_ddl.sql  2024091301_ddl.sql  2024101001_ddl.sql  2024112901_ddl.sql  2025011501_ddl.sql  tables.sql
core/scrapers/: README.md  README_CN.md  README_EN.md  README_de.md  README_fr.md  README_jp.md  __init__.py  action_dict_scraper.py  coinlive_crawler.py  cryptopanic_crawler.py  cryptotracker_crawler.py  customer_crawl4ai_md_generator.py  deep_scraper.py  default_scraper.py  general_crawler.py  general_scraper.py  mp_crawler.py  mp_scraper.py  scraper_data.py  simple_crawler.py
core/scrips/: start_backend.sh  start_pb.sh  start_tasks.sh
core/scripts/: start_backend.sh  (+1 more)
crews/: crew_index.md  hrbp_index.md  index.md
dashboard/: README.md  __init__.py  backend.py  backend.sh  general_utils.py  get_report.py  get_search.py  main.py  mp_crawler.py  simple_crawler.py
dev/: enhance_browser_skill.md
docs/: README.md  SECURITY.md  addon_development.md  anti-detection-research.md  code_structure.md  crew-system.md  injected_instruction.md  manual.md  multi_crews_design_v2.md  plan-video-workflow-reshape.md  pro_pre_sell.md  prompt_videos.md  quick_start.md  research-vimax-htmlvideo-videoproducer.md  upgrade_plan.md  workspace-bootstrap-files.md
patches/: 001-relax-exec-allowlist-shell-syntax.patch  001-suppress-stale-reply-context.patch  003-act-field-validation.patch  004-chrome-port-grace-retry.patch  005-browser-timeout-env-var.patch  005-codex-provider-apikey.patch  006-connectovercdp-no-defaults.patch  README.md  overrides.sh
pb/: README.md  README_MCP_SERVICE.md  pocketbase_mcp_service.py
reference/: github_search.py  rss_parsor.py
scripts/: README.md  apply-addons.sh  dev.sh  generate-patch.sh  install.sh  reinstall-daemon.sh  setup-crew.sh  setup-wsl2.sh  update-upstream.sh  upgrade.sh  upgrade_without_git.sh
skills/: README.md
test/: README.md  README_EN.md  browser_manager_test.py  craw4ai_fetching.py  crawlee_fetching.py  deep_scraper_test.py  fetching_for_sample.py  fetching_test.py  find_article_or_list.py  get_info_test.py  get_visual_info_for_samples.py  html2md_test.py  info_test_prompts.py  mc_fetching_test.py  nodriver_fetcher.py  openai_wrapper.py  pre_process_test.py  prompts.py  read_markdown.py  test_base_domain.py  test_nd.py  vl_pic_test.py
tests/: README.md  crew-architecture-regression.sh  install-network-resilience-regression.sh  run-managed-tests.mjs
weixin_mp/: README.md  __init__.py  config.json  requirements.txt  run_weixin.sh
wiseflow/: README.md  addon.json  overrides.sh
(+1348 files in other folders)
